# sandbox

./: .env-example  .env.example  .gitignore  .prettierrc  0.1cc661d3ff54f854202b.manager.bundle.js  1.736ca3ae772020a62954.manager.bundle.js  5.91b47206597707933e8f.manager.bundle.js  6.3f4805eeb2602735bb6f.manager.bundle.js  8.fc5fdaaa4ce167f3ed7c.manager.bundle.js  Cargo.toml  LICENSE  Main.hs  README.md  contentlayer.config.ts  design.sketch  flake.nix  iframe.html  index.css  index.html  index.ts  jest.config.ts  main.3a81e777607b768bcdff.manager.bundle.js  main.py  next-sitemap.config.js  next-sitemap.js  next.config.js  notes.md  ormconfig.json  package-lock.json  package.json  project.json  replit.nix  runtime~main.c3e98c5df5722b0e4cfd.manager.bundle.js  shell.nix  shell.nix.template  stories.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vendors~main.343d5407df49aa03f0f1.manager.bundle.js  (+1 more)
Lógica-de-programação/: README.md
Mod. B/: index.html
Mod. D/: aula11b.js  aula11c.html
ai/: cancer.csv  main.py
api/: shell.nix
app/: package-lock.json
assets/: Button.ca1affdb.js  Button.ca1affdb.js.map  Button.stories.69e39d3c.js  Button.stories.69e39d3c.js.map  Checkbox.08fdb8e3.js  Checkbox.08fdb8e3.js.map  Checkbox.stories.b2a29e36.js  Checkbox.stories.b2a29e36.js.map  Color-f953d088.f26a1957.js  Color-f953d088.f26a1957.js.map  GlobalScrollAreaStyles-8793ce4a.e5c4dff7.js  GlobalScrollAreaStyles-8793ce4a.e5c4dff7.js.map  Heading.d71ad741.js  Heading.d71ad741.js.map  (+83 more)
learning-haskell/ufabc/quickcheck/: .gitignore  quickcheck.cabal  stack.yaml
(+1083 files in other folders)
